# serializer version: 1
# name: test_all_entities[sensor.4_4_ktlx_g3_communication_health-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'good',
        'degraded',
        'poor',
        'unknown',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.4_4_ktlx_g3_communication_health',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Communication health',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Communication health',
    'platform': 'sofar',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'communication_health',
    'unique_id': 'SS2ES104N5S445_communication_health',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.4_4_ktlx_g3_communication_health-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '4.4 KTLX-G3 Communication health',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'good',
        'degraded',
        'poor',
        'unknown',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.4_4_ktlx_g3_communication_health',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'good',
  })
# ---
# name: test_all_entities[sensor.4_4_ktlx_g3_last_error-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.4_4_ktlx_g3_last_error',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Last error',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Last error',
    'platform': 'sofar',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'communication_health_last_error',
    'unique_id': 'SS2ES104N5S445_communication_health_last_error',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.4_4_ktlx_g3_last_error-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '4.4 KTLX-G3 Last error',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.4_4_ktlx_g3_last_error',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[sensor.4_4_ktlx_g3_last_error_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.4_4_ktlx_g3_last_error_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Last error time',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last error time',
    'platform': 'sofar',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'communication_health_last_error_time',
    'unique_id': 'SS2ES104N5S445_communication_health_last_error_time',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.4_4_ktlx_g3_last_error_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'timestamp',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '4.4 KTLX-G3 Last error time',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.4_4_ktlx_g3_last_error_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[sensor.4_4_ktlx_g3_success_rate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.4_4_ktlx_g3_success_rate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Success rate',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Success rate',
    'platform': 'sofar',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'communication_health_success_rate',
    'unique_id': 'SS2ES104N5S445_communication_health_success_rate',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor.4_4_ktlx_g3_success_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '4.4 KTLX-G3 Success rate',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.4_4_ktlx_g3_success_rate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100.0',
  })
# ---
